<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_results"
        android:orderInCategory="200"
        android:title="@string/stats"
        app:showAsAction="never" />
    <item
        android:id="@+id/volumess"
        android:orderInCategory="200"
        android:title="@string/volumes"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_prog"
        android:orderInCategory="100"
        android:title="@string/changeProg"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>