<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sdairy.simple_workout_daiary.activityes.ValuesBodyEditor">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/biceps_ed"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal"
        android:hint="@string/biceps"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chest_ed"
        android:layout_below="@+id/biceps_ed"
        android:layout_alignLeft="@+id/biceps_ed"
        android:layout_alignStart="@+id/biceps_ed"
        android:layout_alignRight="@+id/biceps_ed"
        android:layout_alignEnd="@+id/biceps_ed"
        android:inputType="numberDecimal"
        android:hint="@string/chest"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/talia_ed"
        android:layout_below="@+id/leg_ed"
        android:layout_alignLeft="@+id/leg_ed"
        android:layout_alignStart="@+id/leg_ed"
        android:layout_alignRight="@+id/leg_ed"
        android:layout_alignEnd="@+id/leg_ed"
        android:inputType="numberDecimal"
        android:hint="@string/talia"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leg_ed"
        android:layout_below="@+id/chest_ed"
        android:layout_alignLeft="@+id/chest_ed"
        android:layout_alignStart="@+id/chest_ed"
        android:layout_alignRight="@+id/chest_ed"
        android:layout_alignEnd="@+id/chest_ed"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/white"
        android:hint="@string/leg" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoulder_ed"
        android:layout_below="@+id/talia_ed"
        android:layout_alignLeft="@+id/talia_ed"
        android:layout_alignStart="@+id/talia_ed"
        android:layout_alignRight="@+id/talia_ed"
        android:layout_alignEnd="@+id/talia_ed"
        android:inputType="numberDecimal"
        android:hint="@string/shoulder"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ikri_ed"
        android:layout_below="@+id/shoulder_ed"
        android:layout_alignLeft="@+id/shoulder_ed"
        android:layout_alignStart="@+id/shoulder_ed"
        android:layout_alignRight="@+id/shoulder_ed"
        android:layout_alignEnd="@+id/shoulder_ed"
        android:inputType="numberDecimal"
        android:hint="@string/ikri"
        android:textColorHint="@android:color/white" />
    <Button
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="#0075fb"
        android:layout_below="@+id/ikri_ed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:onClick="saveValue" />


</RelativeLayout>
