<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
            android:text="@string/weight"
            android:id="@+id/textView"
            android:layout_below="@+id/name_item"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
            android:text="@string/reps"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/weight_coun_item"
            android:layout_toRightOf="@+id/weight_coun_item"
            android:layout_toEndOf="@+id/weight_coun_item"
            android:layout_marginRight="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
            android:text="@string/_100"
            android:id="@+id/weight_coun_item"
            android:layout_alignTop="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginRight="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
            android:text="@string/_40"
            android:id="@+id/coun_item"
            android:layout_below="@+id/name_item"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginRight="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
            android:text="Large Text"
            android:id="@+id/name_item"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
            android:text="@string/rest"
            android:id="@+id/textView4"
            android:layout_alignTop="@+id/rest_time_item"
            android:layout_toRightOf="@+id/coun_item"
            android:layout_toEndOf="@+id/coun_item"
            android:layout_marginRight="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
            android:text="Large Text"
            android:id="@+id/rest_time_item"
            android:layout_alignTop="@+id/coun_item"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4" />

    </RelativeLayout>
</LinearLayout>