<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contenttr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activityes.train_process">

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
        android:textSize="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/weight_count"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
        android:textColorHint="@android:color/white"
        android:textSize="40dp"
        android:layout_alignTop="@+id/count_reps"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/space" />

    <EditText
        android:id="@+id/count_reps"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/reps"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/white"
        android:textIsSelectable="false"
        android:textSize="40dp"
        android:layout_below="@+id/chronometer"
        android:layout_toEndOf="@+id/weight_count" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/weight_count"
        android:layout_alignParentStart="true">

    </LinearLayout>

    <ListView
        android:id="@+id/results_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contextClickable="false"
        android:divider="#009dff"
        android:dividerHeight="2dp"
        android:layout_below="@+id/next_set"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/next_set"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginRight="3dp"
        android:background="#009dff"
        android:onClick="nextSet"
        android:text="@string/Next"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="25dp"
        android:layout_below="@+id/weight_count"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/space" />

    <Space
        android:id="@+id/space"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/exercise_name"
        android:layout_centerHorizontal="true" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Inverse"
        android:textSize="45sp"
        android:layout_below="@+id/space"
        android:layout_alignEnd="@+id/exercise_name" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:background="#009dff"
        android:onClick="nextExercise"
        android:text="@string/nextSet"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:layout_below="@+id/count_reps"
        android:layout_alignStart="@+id/count_reps"
        android:layout_above="@+id/results_today"
        android:layout_alignEnd="@+id/count_reps" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_down_Screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"></com.google.android.gms.ads.AdView>


</RelativeLayout>
