<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sdairy.simple_workout_daiary.activityes.ResultsEdit">

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="3dp" />

    <ListView
        android:id="@+id/data_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/startdate"
        android:divider="#0080ff"
        android:dividerHeight="2dp" />

    <TextView
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:onClick="datePick"
        android:text="Medium Text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:onClick="datePick"
        android:text="Medium Text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/data_list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:onClick="datePick"
        android:text="@string/datestart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chart1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/startdate"
        android:layout_toRightOf="@+id/startdate"
        android:onClick="datePick"
        android:text="@string/dateto"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty"

        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
        android:visibility="invisible"
        android:layout_alignTop="@+id/chart1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="68dp" />
</RelativeLayout>
